--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "jest --watchAll"
   },
   "keywords": [],
@@ -12,6 +12,8 @@
   "devDependencies": {
     "jest": "^25.1.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-fetch": "^2.6.0"
+  },
   "description": ""
 }
